# tvl

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-content  README.md  SECURITY.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  tvl-website-deploy.yml
conformance/: README.md
conformance/expected/: results.json
demos/: .gitignore  README.md  generate-all.sh  record-demos.sh
demos/mock-cli/: tvl  tvo
demos/scripts/: demo-constraints.sh  demo-errors.sh  demo-optimization.sh  demo-quickstart.sh  demo-validate.sh  generate-cast.py
demos/tapes/: _theme.tape  constraint-check.tape  error-diagnostics.tape  optimization.tape  quick-start.tape  validate-spec.tape
docs/: getting-started.md  index.md
docs/examples/: walkthroughs.md
docs/guides/: statistical-validation-guide.md  traigent-tvl-integration.md
docs/reference/: error-codes.md  language.md
editor_shared/vscode/: language-configuration.json
formalization/: tvl-formal-roadmap.md  tvl-formal-semantics.md
proofs/: Main.lean  OPALCORE_README.md  PROOF_SUMMARY.md  README.md  lake-manifest.json  lakefile.lean
proofs/TVL/: Basic.lean  Dominance.lean  OPALCore.lean  SMTEncoding.lean  TypeSoundness.lean  Types.lean
python/tvl/: __init__.py  configuration.py  constraints.py  errors.py  lints.py  loader.py  measurement.py  model.py  objectives.py  operational.py  promotion.py  schema.py  structural_parser.py  structural_sat.py
python/tvl_book_plugins/: __init__.py  social_override.py
spec/: promotion-evidence-contract.md  promotion-gate-io.md
spec/archive/: README.md  TVL-0.1.md
spec/configurations/: agent-router.config.yml  rag-support-bot.config.yml
spec/examples/: agent-router.tvl.yml  cost-optimization.tvl.yml  multi-tenant-router.tvl.yml  rag-support-bot.tvl.yml  tool-use.yml
tests/: __init__.py  test_lints.py  test_measurement_bundle.py  test_operational.py  test_promotion_policy.py  test_structural_sat.py  test_tvl_compose.py  test_type_system.py
tvl_book/: tvl_specification.pdf.license
tvl_tools/: __init__.py  cli_utils.py
vscode-tvl/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
website/: .gitignore  DEPLOYMENT.md  package.json  pnpm-lock.yaml  todo.md  vite.config.ts
(+246 files in other folders)
